--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,27 @@
         android:theme="@style/Theme.Fatnassi_Chaima_Mesure_Glycemie"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".View.ConsultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity> <!-- -intente data type extra action et category -->
+        <activity
+            android:name=".View.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="preloaded_fonts" />
+
+                <category android:name="@array/preloaded_fonts" />
+            </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
